Minor style/formatting changes