@@ -13,7 +13,7 @@ import one.profiler.test.TestProcess;
 
 import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 
 public class AllocTests {
@@ -66,9 +66,9 @@ public class AllocTests {
         Output out = p.profile("-e alloc -d 3 -o collapsed");
         // _[k] suffix in collapsed output corresponds to jdk.ObjectAllocationOutsideTLAB, which means alloc tracer is being used
         assert !out.contains("_\\[k\\]"); // we are using alloc tracer instead of object sampler, should definitely not happen on first profiling call
-        File asprofCopy = File.createTempFile(TestProcess.PROFILER_LIB_NAME, p.currentOs().getLibExt());
+        File asprofCopy = File.createTempFile(new File(p.profilerLibPath()).getName(), null);
         asprofCopy.deleteOnExit();
-        Files.copy(Path.of(p.profilerLibPath()), asprofCopy.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(Paths.get(p.profilerLibPath()), asprofCopy.toPath(), StandardCopyOption.REPLACE_EXISTING);
         Output outWithCopy = p.profile(String.format("--libpath %s -e alloc -d 3 -o collapsed", asprofCopy.getAbsolutePath()));
         assert !outWithCopy.contains("_\\[k\\]"); // first instance of profiler has not properly relinquished the can_generate_sampled_object_alloc_events capability.
     }
